# nind

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile-debian11  Dockerfile-debian9.4  Dockerfile-ubuntu16.04  Dockerfile-ubuntu18.04  NindConfig.cmake  README.md  SystemSpecificInformations.cmake  gbuild.sh  nindGit.kdev4
.github/workflows/: docker-publish.yml
src/cpp/: CMakeLists.txt  Doxyfile  NindCommonExport.h  NindExceptions.h
src/cpp/NindAmose/: CMakeLists.txt  NindLexiconAmose.cpp  NindLexiconAmose.h  NindLocalAmose.cpp  NindLocalAmose.h  NindTermAmose.cpp  NindTermAmose.h
src/cpp/NindBasics/: CMakeLists.txt  NindFile.cpp  NindFile.h  NindFileBE.cpp  NindFileLE.cpp  NindPadFile.cpp  NindPadFile.h  NindSignalCatcher.cpp  NindSignalCatcher.h
src/cpp/NindIndex/: CMakeLists.txt  NindIndex.cpp  NindIndex.h  NindLexiconIndex.cpp  NindLexiconIndex.h  NindLexiconIndexK.cpp  NindLexiconIndexK.h  NindLocalIndex.cpp  NindLocalIndex.h  NindRetrolexiconIndex.cpp  NindRetrolexiconIndex.h  NindTermIndex.cpp  NindTermIndex.h
src/cpp/NindLexicon/: CMakeLists.txt  NindLexicon.cpp  NindLexicon.h  NindLexiconA.cpp  NindLexiconA.h  NindLexiconB.cpp  NindLexiconC.cpp  NindLexiconE.cpp  NindLexiconF.cpp  NindLexiconFile.cpp  NindLexiconFile.h  NindLexiconH.cpp
src/cpp/NindLexicon/essais/: NindLexiconA.cpp  NindLexiconA.h  NindLexiconB.cpp  NindLexiconB.h  NindLexiconC.cpp  NindLexiconC.h  NindLexiconD.cpp  NindLexiconD.h  NindLexiconE.cpp  NindLexiconE.h  NindLexiconF.cpp  NindLexiconF.h  NindLexiconG.cpp  NindLexiconG.h  NindLexiconH.cpp  NindLexiconH.h
src/cpp/NindRetrolexicon/: CMakeLists.txt  NindRetrolexicon.cpp  NindRetrolexicon.h
src/cpp/NindTermIndex/: CMakeLists.txt  NindTerm.cpp  NindTerm.h  NindTermIndex.cpp  NindTermIndex.h  NindTermIndexFile.cpp  NindTermIndexFile.h
src/py/: CMakeLists.txt  NindFile.py  NindIndex.py  NindLateconFile.py  NindLexiconindex.py  NindLexiconindexInverse.py  NindLocalindex.py  NindPadFile.py  NindRetrolexicon.py  NindRetrolexiconindex.py  NindSearch.py  NindTermindex.py  Nind_AnalyzeIndexFile.py  Nind_MiseEnFormeLexique.py  Nind_StatistiquesLettres.py  Nind_StatistiquesLexique.py  Nind_StatistiquesTermes.py  Nind_StatistiquesTermesCg.py  Nind_StatistiquesTermesDocuments.py  Nind_TrouveParLettres.py  Nind_analyseLexique.py  Nind_checkAndRepair.py  Nind_checkDocument.py  Nind_checkRejtroAndLexicon.py  Nind_compareLexiques.py  Nind_compareListeDeMots.py  Nind_countLateconInt.py  Nind_countLinesInFile.py  Nind_create_lexicon-V1.py  Nind_create_lexicon-V2.py  Nind_create_listOfWords.py  Nind_dumpDocument.py  Nind_dumpIndexFile.py  Nind_dumpLexicon.py  Nind_dumpLexiconFile.py  Nind_dumpLexiconIndexFile.py  Nind_dumpLexiconIndexKFile.py  Nind_dumpLocalIndexFile.py  Nind_dumpMemoryLexiconFile.py  Nind_dumpTermIndexFile.py  (+5 more)
src/py/amose/: CMakeLists.txt  LatXmlParser.py  NindIdentifiantsClef.py  Nind_convertitSampleDump.py  Nind_convertitXmlClef.py
src/py/lucene/: LatXmlParser.py  analyseLuceneDump.py  analyseSampleDump.py  convertitLuceneDump.py
tst/cpp/: CMakeLists.txt
tst/cpp/NindAmose/: CMakeLists.txt  NindAmose_effaceDocument.cpp  NindAmose_indexeCorpus.cpp  NindAmose_litTexteAnalysej.cpp  NindAmose_litTexteAnalysej.h  NindAmose_testLecteur.cpp  NindAmose_testSynchro.cpp  Nind_indexeCorpus.cpp
tst/cpp/NindBasics/: CMakeLists.txt  NindBasics_testLecture.cpp
tst/cpp/NindIndex/: CMakeLists.txt  NindDate.cpp  NindDate.h  NindFichiers.cpp  NindFichiers.h  NindIndexTest.cpp  NindIndexTest.h  NindIndex_indexe.cpp  NindIndex_indexe.h  NindIndex_litDumpS2.cpp  NindIndex_litDumpS2.h  NindIndex_testEcrivain.cpp  NindIndex_testLecteur.cpp  NindIndex_testSynchro.cpp  NindLexiconIndex_testEcrivain.cpp  NindLexiconIndex_testLecteur.cpp  NindTermIndex_testEcrivain.cpp  NindTermIndex_testLecteur.cpp  Nind_testLateconNumber.cpp  Nind_testNumbersInLocalIndexes.cpp
tst/cpp/NindLexicon/: CMakeLists.txt  NindLexicon_testEcrivain.cpp  NindLexicon_testInter.cpp  NindLexicon_testLecteur.cpp  NindLexicon_testLimites.cpp  NindLexicon_testLimitesB.cpp  NindLexicon_testLimitesC.cpp  NindLexicon_testMemoire.cpp
tst/cpp/NindSearch/: CMakeLists.txt  NindGetDocTerms.cpp  NindSearch.cpp  NindSearchAmose.cpp
tst/cpp/NindTermIndex/: CMakeLists.txt  NindTermIndex_testEcrivain.cpp
tst/cpp/NindTests/: CMakeLists.txt  NindLexicon_test1.cpp  NindLexicon_test1B.cpp  NindLexicon_test2.cpp  NindLexicon_test3.cpp  NindLexicon_test4.cpp  NindTestControlC.cpp  Nind_test1.cpp  Nind_testSynchro.cpp
