
# ########### install files ###############
install(PROGRAMS
    Nind_AnalyzeIndexFile.py
    Nind_compareLexiques.py
    Nind_compareListeDeMots.py
    Nind_countLateconInt.py
    Nind_countLinesInFile.py
    Nind_create_lexicon-V1.py
    Nind_create_lexicon-V2.py
    Nind_create_listOfWords.py
    Nind_dumpDocument.py
    Nind_dumpIndexFile.py
    Nind_dumpLexiconFile.py
    Nind_dumpLexiconIndexFile.py
    Nind_dumpLexiconIndexKFile.py
    Nind_dumpLexicon.py
    Nind_dumpLocalIndexFile.py
    Nind_dumpTermIndexFile.py
    NindFile.py
    Nind_findTermeK.py
    Nind_findTerme.py
    NindIndex.py
    NindLateconFile.py
    NindLexiconindexInverse.py
    NindLexiconindex.py
    NindLocalindex.py
    Nind_MiseEnFormeLexique.py
    NindSearch.py
    Nind_StatistiquesLettres.py
    Nind_StatistiquesLexique.py
    Nind_StatistiquesTermesCg.py
    Nind_StatistiquesTermesDocuments.py
    Nind_StatistiquesTermes.py
    NindTermindex.py
    Nind_TrouveParLettres.py
  DESTINATION bin)

