
# ########### install files ###############
install(PROGRAMS
    Nind_AnalyzeIndexFile.py
    Nind_dumpDocument.py
    Nind_dumpLexiconIndexFile.py
    Nind_dumpLexicon.py
    Nind_dumpLocalIndexFile.py
    Nind_dumpTermIndexFile.py
    NindIndex.py
    NindLateconFile.py
    NindLexiconindex.py
    NindLocalindex.py
    NindSearch.py
    NindTermindex.py
  DESTINATION bin)

